--- a/website/templates/website/post_list.html
+++ b/website/templates/website/post_list.html
@@ -6,7 +6,7 @@
         <article class="card">
             <a href={% url 'detail' post.pk %} class="card-link">
                 <picture class="card-image">
-                    <img src="{{ post.image.url }}" alt="{{ post.title }}">
+                    <img src="{{ post.image }}" alt="{{ post.title }}">
                 </picture>
                 <div>
                     <h2 class="card-headline">{{ post.title }}</h2>
